--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.111.0"
 sqlalchemy = "^2.0.31"
+alembic = "^1.13.2"
+pytest = "^8.2.2"
 
 
 [build-system]
